# QTAudioPlayer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: audioplayer.cpp  audioplayer.h  localmusicmanager.cpp  localmusicmanager.h  lrcparser.cpp  lrcparser.h  musicapimanager.cpp  musicapimanager.h  songinfo.h
pages/: dailyrecommendpage.cpp  dailyrecommendpage.h  discoverypage.cpp  discoverypage.h  favoritepage.cpp  favoritepage.h  localmusicpage.cpp  localmusicpage.h  mvpage.cpp  mvpage.h  playerdetailpage.cpp  playerdetailpage.h  playlistpage.cpp  playlistpage.h  rankingpage.cpp  rankingpage.h  searchresultpage.cpp  searchresultpage.h
widgets/: footerwidget.cpp  footerwidget.h  headerwidget.cpp  headerwidget.h  lyricswidget.cpp  lyricswidget.h  menuwidget.cpp  menuwidget.h  playlistwidget.cpp  playlistwidget.h  scrollinglabel.cpp  scrollinglabel.h  videoplayerwidget.cpp  videoplayerwidget.h  vinylwidget.cpp  vinylwidget.h
